# actix-generator

./: .gitignore  Cargo.toml  README.md
asdf/: Cargo.toml
asdf/src/: main.rs
foo/: Cargo.toml
foo/src/middleware/: logger.rs  mod.rs
foo/src/route/: index.rs
src/: main.rs
src/command/: args.rs  commands.rs  init.rs  mod.rs  new.rs
src/lib/: cargo_toml.rs  command.rs  constants.rs  mod.rs  options.rs
src/lib/errors/: mod.rs  template_error.rs
src/lib/template/: manager.rs  mod.rs
src/lib/toml/: mod.rs
templates/basic/: Cargo.toml
templates/basic/src/: main.rs
templates/basic/src/route/: mod.rs
templates/basic/src/routes/: index.rs  mod.rs
templates/basic/src/routes/auth/: mod.rs  router.rs
templates/basic/src/routes/auth/types/: login_request.rs  login_response.rs  mod.rs
templates/basic/src/routes/user/: router.rs
templates/basic/src/routes/user/types/: mod.rs  myinfo_request.rs  myinfo_response.rs  signup_request.rs  signup_response.rs
