[package]
name = "actix-generator"
version = "0.3.1"
authors = ["myyrakle <sssang97@naver.com>"]
description = "Actix Web Template Generator" 
keywords = ["actix", "axtix-web", "generator", "actix_web"] 
edition = "2018" 
license = "MIT" 
include = ["src/*", "Cargo.toml"] 
exclude = [] #업로드 제외
readme = "README.md" 
repository = "https://github.com/myyrakle/actix-generator" 
documentation = "https://github.com/myyrakle/actix-generator/blob/master/README.md" 
homepage = "https://github.com/myyrakle/actix-generator/blob/master/README.md" 

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
zip = "0.5"
atty = { version = "0.2.14", optional = true }
structopt = { version = "0.3.18", optional = true }

[[bin]]
name = "cargo-actix"
path = "src/main.rs"
required-features = ["actix"]

[features]
default = ["actix"]
actix = ["cli"]
cli = ["atty", "structopt"]