[package]
name = "asdf"
version = "0.1.0"
authors = ["your-name"]
edition = "2018"

[dependencies]
actix-files = "0.4"
actix-rt = "1"
actix-service = "1.0.5"
actix-web = "3"
dotenv = "0.9.0"
env_logger = "0.7"
futures = "0.3.5"
listenfd = "0.3"
log = "0.4.8"
log4rs = "0.13.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
actix-web-validator = "2.0.3"
validator = { version = "0.12.0", features = ["derive"] }
validator_derive = "0.12.0"